[project]
name = "missing-tool"
description = "A few tools for ComfyUI, perhaps it's exactly what you need."
version = "1.0.1"
license = {file = "LICENSE"}
dependencies = ["torch", "numpy", "Pillow"]

[project.urls]
Repository = "https://github.com/ifmylove2011/comfyui-missing-tool"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ifmylove2011"
DisplayName = "comfyui-missing-tool"
Icon = ""
